--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -66,7 +66,7 @@ body {
 			white-space: nowrap;
 			border-bottom: 0 solid transparent;
 		}
-		a { 
+		a {
 			display: block;
 			padding: 10px 0;
 			decoration: none;
@@ -151,11 +151,11 @@ body {
 	}
 }
 // Style the toggle menu link and hide it
-.nav .navtoogle {	
+.nav .navtoogle {
 	.font-rem(18);
 	font-weight: normal;
 	background-color: @black;
-	color: @white;	
+	color: @white;
 	border: none;
 	cursor: pointer;
 	@media @600px {
@@ -192,7 +192,7 @@ body {
 	}
 }
 // Displaying the menu when the user has clicked on the button
-.js .nav .active + ul {		
+.js .nav .active + ul {
 	max-height: 30em;
 	overflow: hidden;
 	-webkit-transition: max-height .4s;
@@ -330,6 +330,14 @@ body {
     .translate(0, 2px);
   }
 }
+.article-author-main {
+	display: block;
+	.bio-photo {
+		max-width: 110px;
+		.rounded(150px);
+	}
+}
+
 .article-author-side {
 	display: none;
 	.bio-photo {
@@ -404,7 +412,7 @@ body {
 			border-bottom-style: solid;
 		}
 	}
-	p > a.reversefootnote, 
+	p > a.reversefootnote,
 	li > a.reversefootnote {
 		border-bottom-width: 0;
 	}
@@ -493,7 +501,7 @@ body {
 	margin: 1em 0;
 	li {
 		display: inline;
-		a { 
+		a {
 			border-bottom: 0 solid transparent;
 			&:hover {
 				border-bottom: 0 solid transparent;
@@ -522,12 +530,12 @@ body {
 	a.jp-current {
 		font-weight: bold;
 	}
-	a.jp-disabled, 
+	a.jp-disabled,
 	a.jp-disabled:hover {
 	}
-	a.jp-current, 
-	a.jp-current:hover,  
-	a.jp-disabled, 
+	a.jp-current,
+	a.jp-current:hover,
+	a.jp-disabled,
 	a.jp-disabled:hover {
 		cursor: default;
 		background: none;
@@ -548,7 +556,7 @@ body {
 	h4,
 	h5,
 	h6,
-	span { 
+	span {
 		.font-rem(14);
 	}
 	footer {
@@ -583,7 +591,7 @@ body {
 		.suffix(12,3.5);
 	}
 	h4 {
-		
+
 		text-transform: uppercase;
 		margin-bottom: 0;
 	}
