--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -5,7 +5,7 @@
 <!-- Asynchronous Google Analytics snippet -->
 <script>
   var _gaq = _gaq || [];
-  var pluginUrl = 
+  var pluginUrl =
  '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
   _gaq.push(['_setAccount', '{{ site.google_analytics }}']);
@@ -20,4 +20,7 @@
 {% endif %}
 {% if page.comments %}
   {% include _disqus_comments.html %}
+{% endif %}
+{% if site.mixpanel_code %}
+  {% include _mixpanel_analytics.html %}
 {% endif %}
