--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,8 @@
     <div class="headline-wrap">
       <h1>{{ page.title }}</h1>
     </div><!--/ .headline-wrap -->
+    {% include _justshare.html %}
+    <br><br>
     <div class="article-wrap">
       {{ content }}
       <hr />
@@ -66,6 +68,7 @@
             {% endfor %}
         {% endif %}
       </a>.</p>
+      {% include _justshare.html %}
       </footer>
     </div><!-- /.article-wrap -->
   {% if site.disqus_shortname and page.comments %}
