--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -92,3 +92,6 @@
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/images/apple-touch-icon-114x114-precomposed.png">
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/apple-touch-icon-144x144-precomposed.png">
+
+<!-- Socialite -->
+<script src="{{ site.url }}/assets/js/vendor/socialite.min.js"></script>
