--- a/_includes/_justshare.html
+++ b/_includes/_justshare.html
@@ -1,4 +1,20 @@
-<i>Just share via <a href="http://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}"><i class="icon-facebook"></i></a>&nbsp;|&nbsp;
-<a href="http://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&via=justshareapp"><i class="icon-twitter"></i></a>&nbsp;|&nbsp;
-<a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}""><i class="icon-google-plus"></i></a>
-</i>
+<div class="social-box">
+
+<ul id="sharethis" class="social-buttons cf">
+    <li>
+      <img src="/images/shareit.png">
+    </li>
+    <li>
+        <a href="http://twitter.com/share" class="socialite twitter-share" data-text="{{ page.title }}" data-url="{{ site.url }}{{ page.url }}" data-count="vertical" rel="nofollow" target="_blank"><span class="vhidden">Share on Twitter</span></a>
+    </li>
+    <li>
+        <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" class="socialite googleplus-one" data-size="tall" data-href="{{ site.url }}{{ page.url }}" rel="nofollow" target="_blank"><span class="vhidden">Share on Google+</span></a>
+    </li>
+    <li>
+        <a href="http://www.facebook.com/sharer.php?u={{ site.url }}{{ page.url }}&t={{ page.title }}" class="socialite facebook-like" data-href="{{ site.url }}{{ page.url }}" data-send="false" data-layout="box_count" data-width="60" data-show-faces="false" rel="nofollow" target="_blank"><span class="vhidden">Share on Facebook</span></a>
+    </li>
+    <li>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title }}" class="socialite linkedin-share" data-url="{{ site.url }}{{ page.url }}" data-counter="top" rel="nofollow" target="_blank"><span class="vhidden">Share on LinkedIn</span></a>
+    </li>
+</ul>
+</div>
