fix for responsive layout

--- a/_includes/_justshare.html
+++ b/_includes/_justshare.html
@@ -2,7 +2,7 @@
 
 <ul id="sharethis" class="social-buttons cf">
     <li>
-      <img src="/images/shareit.png">
+      <img class="shareit" src="/images/shareit.png">
     </li>
     <li>
         <a href="http://twitter.com/share" class="socialite twitter-share" data-text="{{ page.title }}" data-url="{{ site.url }}{{ page.url }}" data-count="vertical" rel="nofollow" target="_blank"><span class="vhidden">Share on Twitter</span></a>
