--- a/assets/less/social.less
+++ b/assets/less/social.less
@@ -17,3 +17,15 @@
 .social-buttons .googleplus-one { width: 50px; height: 65px; background-position: -75px 0; }
 .social-buttons .facebook-like { width: 50px; height: 65px; background-position: -145px 0; }
 .social-buttons .linkedin-share { width: 60px; height: 65px; background-position: -215px 0; }
+
+.shareit {
+  display: none;
+  @media @600px {
+    display: none;
+  }
+  @media @992px {
+    display: block;
+  }
+
+}
+.social-box { margin: 5px; }
