Added author avatars to the post index page, tweet counts

--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -29,7 +29,11 @@
   (function() {
     $('.social-buttons').one('mouseenter', function()
     {
-      Socialite.load();
+      Socialite.load('.social-buttons');
+    });
+    $('.post-index-item').one('mouseenter', function()
+    {
+      Socialite.load(this);
     });
   })();
 
