--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -341,7 +341,15 @@ body {
 		.rounded(150px);
 	}
 }
-
+.post-index-author-main {
+	display: inline-block;
+	float: left;
+	.bio-photo {
+		max-width: 60px;
+		.rounded(150px);
+		margin-right: 20px;
+	}
+}
 .article-author-side {
 	display: none;
 	.bio-photo {
