--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -63,9 +63,31 @@
            <h3>{{ post.date | date: '%Y' }}</h3>
          {% endif %}
        {% endunless %}
-       <article>
+
+        <article class="post-index-item">
+         {% assign authorCount = post.authors | size %}
+         {% if authorCount == 0 %}
+         <div class="post-index-author-main">
+           <img src="{{ site.url }}/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo"></a>
+         </div>
+         {% elsif authorCount >= 1 %}
+             {% assign _author = site.authors[post.authors.first] %}
+             <div class="post-index-author-main">
+             {% if _author.avatar contains 'http://' %}
+               <img src="{{ _author.avatar }}" class="bio-photo" alt="{{ _author.name }} bio photo"></a>
+             {% elsif _author.avatar contains 'https://' %}
+               <img src="{{ _author.avatar }}" class="bio-photo" alt="{{ _author.name }} bio photo"></a>
+             {% else %}
+               <img src="{{ site.url }}/images/{{ _author.avatar }}" class="bio-photo" alt="{{ _author.name }} bio photo"></a>
+             {% endif %}
+           </div>
+         {% endif %}
          <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
-         <p>{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}</p>
+         <p>{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 120 }}{% endif %}
+           <a href="http://twitter.com/share" class="socialite twitter-share" data-text="{{ post.title }}" data-url="{{ site.url }}{{ post.url }}" rel="nofollow" target="_blank"><span class="vhidden">Share on Twitter</span></a>
+         </p>
+
+
        </article>
    {% endif %}
   {% endfor %}
@@ -78,6 +100,6 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}
-  
+
 </body>
 </html>
