added separate cname for just share butttons

--- a/_includes/_justshare.html
+++ b/_includes/_justshare.html
@@ -5,16 +5,16 @@
       <img class="shareit" src="/images/shareit.png">
     </li>
     <li>
-        <a href="http://twitter.com/share" class="socialite twitter-share" data-text="{{ page.title }}" data-url="{{ site.url }}{{ page.url }}" data-count="vertical" rel="nofollow" target="_blank"><span class="vhidden">Share on Twitter</span></a>
+        <a href="http://twitter.com/share" class="socialite twitter-share" data-text="{{ page.title }}" data-url="{{ site.cname }}{{ page.url }}" data-count="vertical" rel="nofollow" target="_blank"><span class="vhidden">Share on Twitter</span></a>
     </li>
     <li>
-        <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" class="socialite googleplus-one" data-size="tall" data-href="{{ site.url }}{{ page.url }}" rel="nofollow" target="_blank"><span class="vhidden">Share on Google+</span></a>
+        <a href="https://plus.google.com/share?url={{ site.cname }}{{ page.url }}" class="socialite googleplus-one" data-size="tall" data-href="{{ site.cname }}{{ page.url }}" rel="nofollow" target="_blank"><span class="vhidden">Share on Google+</span></a>
     </li>
     <li>
-        <a href="http://www.facebook.com/sharer.php?u={{ site.url }}{{ page.url }}&t={{ page.title }}" class="socialite facebook-like" data-href="{{ site.url }}{{ page.url }}" data-send="false" data-layout="box_count" data-width="60" data-show-faces="false" rel="nofollow" target="_blank"><span class="vhidden">Share on Facebook</span></a>
+        <a href="http://www.facebook.com/sharer.php?u={{ site.cname }}{{ page.url }}&t={{ page.title }}" class="socialite facebook-like" data-href="{{ site.cname }}{{ page.url }}" data-send="false" data-layout="box_count" data-width="60" data-show-faces="false" rel="nofollow" target="_blank"><span class="vhidden">Share on Facebook</span></a>
     </li>
     <li>
-        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title }}" class="socialite linkedin-share" data-url="{{ site.url }}{{ page.url }}" data-counter="top" rel="nofollow" target="_blank"><span class="vhidden">Share on LinkedIn</span></a>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.cname }}{{ page.url }}&title={{ page.title }}" class="socialite linkedin-share" data-url="{{ site.cname }}{{ page.url }}" data-counter="top" rel="nofollow" target="_blank"><span class="vhidden">Share on LinkedIn</span></a>
     </li>
 </ul>
 </div>
