--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -9,6 +9,7 @@
  '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
   _gaq.push(['_setAccount', '{{ site.google_analytics }}']);
+  _gaq.push(['_setDomainName', '{{ site.google_analytics_domain }}']);
   _gaq.push(['_trackPageview']);
 
   (function() {
