--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -336,11 +336,7 @@ body {
 }
 
 .border-box{
-	padding: 10px 20px 10px 20px;
-	border-radius: 5px 5px 5px 5px;
-	border-color: rgba(248, 228, 118, 0.8);
-	border-width: 10px;
-	border-style: dotted;
+	text-align: center;
 }
 
 .article-author-main {
