--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -11,9 +11,9 @@
 @body-color     : @bodycolor;
 @textcolor      : #333332;
 @text-color     : @textcolor;
-@border-color   : @text-color;
-@basecolor 		: #343434;	  
-@compcolor 		: spin(@basecolor, 180); 
+@border-color   : #eee;
+@basecolor 		: #343434;
+@compcolor 		: spin(@basecolor, 180);
 @bordercolor    : @basecolor;
 @white          : #fff;
 @black          : #111;
