--- a/assets/less/typography.less
+++ b/assets/less/typography.less
@@ -3,6 +3,8 @@
 body {
 	font-family: @base-font;
 	color: @text-color;
+	line-height: 1.7;
+	letter-spacing: 0.01rem;
 }
 
 // Headings
@@ -31,22 +33,22 @@ h6 {
 
 // Links
 // --------------------------------------------------
-a { 
+a {
 	text-decoration: none;
-	color: @link-color; 
-	&:visited { 
-		color: lighten(@link-color, 20); 
+	color: @link-color;
+	&:visited {
+		color: lighten(@link-color, 20);
 	}
-	&:hover { 
-		color: darken(@link-color, 20); 
-	}
-	&:focus { 
-		outline: thin dotted; 
+	&:hover {
 		color: darken(@link-color, 20);
 	}
-	&:hover, 
-	&:active { 
-		outline: 0; 
+	&:focus {
+		outline: thin dotted;
+		color: darken(@link-color, 20);
+	}
+	&:hover,
+	&:active {
+		outline: 0;
 	}
 }
 
@@ -99,7 +101,7 @@ figcaption {
 // Blockquotes
 // --------------------------------------------------
 blockquote {
-	margin-left: -28px;
+	margin-left: -5px;
 	padding-left: 20px;
 	border-left: 8px solid @border-color;
 	font-family: @alt-font;
@@ -132,7 +134,7 @@ tt, code, kbd, samp, pre {
 	font-family: @code-font;
 }
 p,
-li { 
+li {
 	code {
 		.font-rem(12);
 		line-height: 1.5;
