--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -359,6 +359,11 @@ body {
 		margin-right: 20px;
 	}
 }
+.post-index-item{
+	p{
+		margin-left: 80px;
+	}
+}
 .article-author-side {
 	display: none;
 	.bio-photo {
