--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,6 +71,10 @@
             {% endfor %}
         {% endif %}
       </a>.</p>
+
+  <a href="https://twitter.com/justshareapp" target="_blank" class="btn btn-info" data-show-count="true" data-size="large" data-count="vertical" data-dnt="true">Follow @justshareapp for insights on the latest in social media marketing.</a>
+
+
       {% include _justshare.html %}
       </footer>
     </div><!-- /.article-wrap -->
