changed landing page description and banner

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,18 @@
 </div>
 
 <div id="index">
+
+<h1> Fresh Social Media Marketing Insights</h1>
+
+We bring you fresh social media marketing insights. We publish the popular <i><a href="/daily-best-social-media-maven-posts">Daily Best</a></i>, a curated list of insightful posts. Updated daily by the team at <a href="http://twitter.com/justshareapp">@justshareapp</a>.
+
+<br><br>
+
+We're also building pioneering new tools to help marketers reach their audience. Currently providing select <i><a href="http://www.justshareapp.com"  target="_blank">early access</></i>.
+
+<br><br>
+
+
   <h3><a href="{{ site.url}}/articles/">Recent Posts</a></h3>
   {% for post in site.posts limit:5 %}
 
