--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -35,6 +35,17 @@
 </div>
 
 <div id="index">
+  <h1> Fresh Social Media Marketing Insights</h1>
+
+  We bring you fresh social media marketing insights. We publish the popular <b><a href="/daily-best-social-media-maven-posts">Daily Best</a></b>, a curated list of insightful posts. Updated daily by the team at <a href="http://twitter.com/justshareapp">@justshareapp</a>.
+
+  <br><br>
+
+  We're also building pioneering new tools to help marketers reach their audience. Currently providing select <i><a href="http://www.justshareapp.com"  target="_blank">early access</></i>.
+
+  <br><br>
+
+
   <h1>{{ page.title }}</h1>
    {% for post in site.posts %}
    {% if page.category %}
