--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -37,7 +37,7 @@
 <div id="index">
   <h1> Fresh Social Media Marketing Insights</h1>
 
-  We bring you fresh social media marketing insights. We publish the popular <b><a href="/daily-best-social-media-maven-posts">Daily Best</a></b>, a curated list of insightful posts. Updated daily by the team at <a href="http://twitter.com/justshareapp">@justshareapp</a>.
+  We like to share. We bring you fresh social media marketing insights. We publish the popular <b><a href="/daily-best-social-media-maven-posts">Daily Best</a></b>, a curated list of insightful posts. Updated daily by the team at <a href="http://twitter.com/justshareapp">@justshareapp</a>.
 
   <br><br>
 
