--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
 
 <h1> Fresh Social Media Marketing Insights</h1>
 
-We bring you fresh social media marketing insights. We publish the popular <i><a href="/daily-best-social-media-maven-posts">Daily Best</a></i>, a curated list of insightful posts. Updated daily by the team at <a href="http://twitter.com/justshareapp">@justshareapp</a>.
+We like to share. We bring you fresh social media marketing insights. We publish the popular <i><a href="/daily-best-social-media-maven-posts">Daily Best</a></i>, a curated list of insightful posts. Updated daily by the team at <a href="http://twitter.com/justshareapp">@justshareapp</a>.
 
 <br><br>
 
