aded popular post

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,15 +36,33 @@
 
 <div id="index">
 
-<h1> Fresh Social Media Marketing Insights</h1>
+<h1> We share fresh social marketing insights</h1>
 
-We like to share. We bring you fresh social media marketing insights. We publish the popular <i><a href="/daily-best-social-media-maven-posts">Daily Best</a></i>, a curated list of insightful posts. Updated daily by the team at <a href="http://twitter.com/justshareapp">@justshareapp</a>.
-
-<br><br>
+We share things that matter, bringing you fresh social media marketing insights. We publish the popular <i><a href="/daily-best-social-media-maven-posts">Daily Best</a></i>, a curated list of insightful posts. Updated daily by the team at <a href="http://twitter.com/justshareapp">@justshareapp</a>.
+<br>
 
 We're also building pioneering new tools to help marketers reach their audience. Currently providing select <i><a href="http://www.justshareapp.com"  target="_blank">early access</></i>.
 
 <br><br>
+
+<h3><a href="{{ site.url}}/articles/">Popular Posts</a></h3>
+
+
+<article class="post-index-item">
+
+        <div class="post-index-author-main">
+
+         <img src="https://pbs.twimg.com/profile_images/418789915166380032/nn5afiTl.jpeg" class="bio-photo" alt="Lavanya Gopinath bio photo">
+
+     </div>
+
+   <h2><a href="http://blog.justshareapp.com/daily-best-social-media-maven-posts/" title="Today's Daily Best from Social Media Mavens">Today's Daily Best from Social Media Mavens</a></h2>
+   <p>Updated Daily - Social Media Marketing Posts That Are Worth Sharing
+     <div class="socialite twitter-share socialite-instance socialite-loaded" data-text="Today's Daily Best from Social Media Mavens" data-url="http://blog.justshareapp.com/daily-best-social-media-maven-posts/" data-default-href="http://twitter.com/share" data-socialite="2"><iframe id="twitter-widget-2" scrolling="no" frameborder="0" allowtransparency="true" src="http://platform.twitter.com/widgets/tweet_button.1399334259.html#_=1399369279840&amp;count=horizontal&amp;id=twitter-widget-2&amp;lang=en&amp;original_referer=http%3A%2F%2F0.0.0.0%3A4000%2F&amp;size=m&amp;text=Today%27s%20Daily%20Best%20from%20Social%20Media%20Mavens&amp;url=http%3A%2F%2Fblog.justshareapp.com%2Fdaily-best-social-media-maven-posts%2F" class="twitter-share-button twitter-tweet-button twitter-share-button twitter-count-horizontal" title="Twitter Tweet Button" data-twttr-rendered="true" style="margin-left:80px; width: 109px; height: 20px;"></iframe></div>
+   </p>
+
+
+ </article>
 
 
   <h3><a href="{{ site.url}}/articles/">Recent Posts</a></h3>
