--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -58,6 +58,13 @@
 <link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
 {% if site.owner.google_plus %}<link rel="author" href="http://plus.google.com/+{{ site.owner.google_plus }}?rel=author">{% endif %}
 
+{% assign authorCount = page.authors | size %}
+{% if authorCount >= 1 %}
+		{% assign _author = site.authors[page.authors.first] %}
+		<link rel="author" href="http://plus.google.com/+{{ _author.google_plus }}?rel=author">
+{% endif %}
+
+
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
