added gplus page owner authorship

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -64,6 +64,7 @@
 		<link rel="author" href="http://plus.google.com/+{{ _author.google_plus }}?rel=author">
 {% endif %}
 
+<a href="https://plus.google.com/103675983417428419617" rel="publisher"/>
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
