--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -130,5 +130,6 @@ We're also building pioneering new tools to help marketers reach their audience.
 
 {% include _scripts.html %}
 
+<script type="text/javascript" src="//s3.amazonaws.com/scripts.hellobar.com/03e95c0a3512dd3dc2bc8c2ddb652a6c00840f82.js"></script>
 </body>
 </html>
