--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -53,5 +53,6 @@
 
 {% include _scripts.html %}          
 
+<script type="text/javascript" src="//s3.amazonaws.com/scripts.hellobar.com/03e95c0a3512dd3dc2bc8c2ddb652a6c00840f82.js"></script>
 </body>
 </html>
