Added side banner ad

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,15 @@
 <div id="main" role="main">
   <div class="article-author-side">
     {% include _author-bio.html %}
+    <br/>
+    <br/>
+    <br/>
+    <h3>Powerful #SMM Tools</h3>
+    <p>Powerful but not Pricey social media marketing tools for professionals and agencies.</p>
+
+    <a target="_blank" href="http://www.justshareapp.com/letsgo.html?utm_source=sidebar&utm_medium=blog&utm_campaign=sidebar-pricey"><img width="90%" src="http://cdn.justshareapp.com/justshare_side_cta.png"></a>
+
+    <p>All plans are unlimited and include free trials.</p>
   </div>
   <article>
     <div class="headline-wrap">
