Added side banner ad

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@
 
     <a target="_blank" href="http://www.justshareapp.com/letsgo.html?utm_source=sidebar&utm_medium=blog&utm_campaign=sidebar-pricey"><img width="90%" src="http://cdn.justshareapp.com/justshare_side_cta.png"></a>
 
-    <p>All plans are unlimited and include free trials.</p>
+    <p>JustShare is free to use for as long as you want and has unlimited plans.</p>
   </div>
   <article>
     <div class="headline-wrap">
