fix landing page static

--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -51,7 +51,7 @@ We're also building pioneering new tools to help marketers reach their audience.
 
         <div class="post-index-author-main">
 
-         <img src="https://pbs.twimg.com/profile_images/418789915166380032/nn5afiTl.jpeg" class="bio-photo" alt="Lavanya Gopinath bio photo">
+         <img src="/images/bio-lavanya.jpg" class="bio-photo" alt="Lavanya Gopinath bio photo">
 
      </div>
 
